// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`change to default imports from esm snapshot 1`] = `
"import React from 'react';
import AtvIkon from \\"@sb1/ffe-icons-react/es/atv-ikon\\";
import MinBamseIkon from \\"@sb1/ffe-icons-react/es/bamse-ikon\\";
const foo = 'bar';"
`;

exports[`change to default imports snapshot 1`] = `
"import React from 'react';
import AtvIkon from \\"@sb1/ffe-icons-react/lib/atv-ikon\\";
import MinBamseIkon from \\"@sb1/ffe-icons-react/lib/bamse-ikon\\";
const foo = 'bar';"
`;
